prodMetadata/src/objects/Stat_Measurement__c.object
<CustomObject>
    <description>Snapshot of a measurement of a stat at a specific point in time.</description>
    <fields>
        <fullName>Amount_Type__c</fullName>
        <description>Amount Type (inherited from Stat record)</description>
        <formula>text(Stat__r.Amount_Type__c)</formula>
        <inlineHelpText>Amount Type (inherited from Stat record)</inlineHelpText>
        <label>Amount Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>The actual measurement amount, e.g. for 25% enter &quot;25&quot;.</description>
        <inlineHelpText>The actual measurement amount, e.g. for 25% enter &quot;25&quot;. Make sure to use whole numbers as well, as in 2,400,000 rather than &quot;2.4 million&quot;</inlineHelpText>
        <label>Measurement Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comparison_1_Amount__c</fullName>
        <description>Amount from Comparison Measurement 1</description>
        <formula>value(If(isblank(Comparison_Measurement_1__r.Amount__c),&quot;&quot;,text(Comparison_Measurement_1__r.Amount__c)))</formula>
        <inlineHelpText>Amount from Comparison Measurement 1</inlineHelpText>
        <label>Comparison 1 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comparison_1_Change__c</fullName>
        <description>Difference between Amount and Comparison 1 Amount</description>
        <formula>value(if(isblank(Comparison_1_Amount__c),&quot;&quot;,text(Amount__c -  Comparison_1_Amount__c)))</formula>
        <inlineHelpText>Difference between Amount and Comparison 1 Amount</inlineHelpText>
        <label>Change since Comparison 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comparison_1_Date__c</fullName>
        <description>The Date from Comparison Measurement 1</description>
        <formula>Comparison_Measurement_1__r.Measurement_Date__c</formula>
        <inlineHelpText>The Date from Comparison Measurement 1</inlineHelpText>
        <label>Comparison 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comparison_2_Amount__c</fullName>
        <description>Amount from Comparison Measurement 2</description>
        <formula>value(If(isblank(Comparison_Measurement_2__r.Amount__c),&quot;&quot;,text(Comparison_Measurement_2__r.Amount__c)))</formula>
        <inlineHelpText>Amount from Comparison Measurement 2</inlineHelpText>
        <label>Comparison 2 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comparison_2_Change__c</fullName>
        <description>Difference between Amount and Comparison 2 Amount</description>
        <formula>value(if(isblank(Comparison_2_Amount__c),&quot;&quot;,text(Amount__c - Comparison_2_Amount__c)))</formula>
        <inlineHelpText>Difference between Amount and Comparison 2 Amount</inlineHelpText>
        <label>Change since Comparison 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comparison_2_Date__c</fullName>
        <description>The Date from Comparison Measurement 2</description>
        <formula>Comparison_Measurement_2__r.Measurement_Date__c</formula>
        <inlineHelpText>The Date from Comparison Measurement 2</inlineHelpText>
        <label>Comparison 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comparison_Measurement_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stat Measurement to compare to current amount.</description>
        <inlineHelpText>Stat Measurement to compare to current amount.</inlineHelpText>
        <label>Comparison Measurement 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Stat_Measurement__c.Stat__c</field>
                <operation>equals</operation>
                <valueField>$Source.Stat__c</valueField>
            </filterItems>
            <filterItems>
                <field>Stat_Measurement__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Stat_Measurement__c</referenceTo>
        <relationshipLabel>Comparison Measurements</relationshipLabel>
        <relationshipName>Compared_Measurements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comparison_Measurement_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stat Measurement to compare to current amount.</description>
        <inlineHelpText>Stat Measurement to compare to current amount.</inlineHelpText>
        <label>Comparison Measurement 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Stat_Measurement__c.Stat__c</field>
                <operation>equals</operation>
                <valueField>$Source.Stat__c</valueField>
            </filterItems>
            <filterItems>
                <field>Stat_Measurement__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Stat_Measurement__c</referenceTo>
        <relationshipLabel>Comparison Measurements 2</relationshipLabel>
        <relationshipName>Compared_Measurements_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Last date covered by this measurement.  E.g. if it covers June 2011, enter &quot;6/30/2011&quot;.</description>
        <inlineHelpText>Last date covered by this measurement.  E.g. if it covers June 2011, enter &quot;6/30/2011&quot;.</inlineHelpText>
        <label>Measurement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>Link to source of specific stat measurement</description>
        <inlineHelpText>Link to source of specific stat measurement</inlineHelpText>
        <label>Stat Measurement Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Measurement_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>On what date was this measurement taken or reported?</description>
        <inlineHelpText>On what date was this measurement taken or reported?</inlineHelpText>
        <label>Measurement Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Measurement_Notes__c</fullName>
        <description>E.g. analysis of the current measurement.</description>
        <inlineHelpText>E.g. analysis of the current measurement.</inlineHelpText>
        <label>Other Measurement Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_Links__c</fullName>
        <label>Related Links</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_notification_when_saved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will trigger a notification to the designated team about this measurement as soon as the record is saved.</description>
        <inlineHelpText>When checked, the system will trigger a notification to the designated team about this measurement as soon as the record is saved.  The checkbox then gets cleared so it can be used again.</inlineHelpText>
        <label>Send notification when I click Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>First date covered by this measurement.  E.g. if it covers June 2011, enter &quot;6/1/2011&quot;.</description>
        <inlineHelpText>First date covered by this measurement.  E.g. if it covers June 2011, enter &quot;6/1/2011&quot;.</inlineHelpText>
        <label>Measurement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stat_Good_Until__c</fullName>
        <description>This stat measurement is considered good until this date.</description>
        <inlineHelpText>This stat measurement is considered good until this date.</inlineHelpText>
        <label>Stat Good Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stat__c</fullName>
        <description>This is a measurement of which Stat?</description>
        <inlineHelpText>This is a measurement of which Stat?</inlineHelpText>
        <label>Stat</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Stat__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Stat__c</referenceTo>
        <relationshipLabel>Stat Measurements</relationshipLabel>
        <relationshipName>Stat_Measurements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Amount Type (deprec)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Number</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Rate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Stat Measurement</label>
    <nameField>
        <displayFormat>StatMeas{YYYY}{MM}-{000}</displayFormat>
        <label>Stat Measurement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stat Measurements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>